Update 'u2342hhzn-dotnet-basic' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-b53a6309c0.79x4.p3.openshiftapps.com/rhtap/rhtap-qe:f91cdd2259575242c99f71765645fff4c45c7886@sha256:20fc04277a9037ec3ca0b7ffef5c78b7aa3cf9e751b347bd0b9877b28f6b8985

--- a/components/u2342hhzn-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/u2342hhzn-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: u2342hhzn-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-b53a6309c0.79x4.p3.openshiftapps.com/rhtap/rhtap-qe:f91cdd2259575242c99f71765645fff4c45c7886@sha256:20fc04277a9037ec3ca0b7ffef5c78b7aa3cf9e751b347bd0b9877b28f6b8985
+          name: container-image
